# django-blog

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
base/: admin.py  models.py  urls.py  views.py
base/api/: urls.py  views.py
base/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py  0003_alter_room_options_room_participants.py
base/templates/base/: activity.html  activity_component.html  delete.html  feed_component.html  forms.py  home.html  login_register.html  login_register_old.html  profile.html  room.html  room_form.html  topics.html  topics_component.html  update-user.html  update-user2.html
django_blog/: settings.py  urls.py
templates/: home.html  main.html  navbar.html  room.html
